k8s/apps/app2/app2-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app2
  namespace: sso-pilot
spec:
  selector:
    app: app2
  ports:
    - port: 8080
      targetPort: 8080
